--- a/admin/server/package.json
+++ b/admin/server/package.json
@@ -33,6 +33,7 @@
     "argon2": "^0.30.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "express-session": "^1.17.3",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
@@ -44,6 +45,7 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.17.7",
     "@types/hapi__joi": "^17.1.9",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
@@ -57,6 +59,7 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.5.0",
+    "pactum": "^3.4.1",
     "prettier": "^2.8.8",
     "prisma": "^5.0.0",
     "source-map-support": "^0.5.21",
