--- a/admin/server/package.json
+++ b/admin/server/package.json
@@ -48,6 +48,7 @@
     "@types/express-session": "^1.17.7",
     "@types/hapi__joi": "^17.1.9",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.7",
     "@types/node": "^20.3.1",
     "@types/passport": "^1.0.12",
     "@types/passport-local": "^1.0.35",
