--- a/admin/package.json
+++ b/admin/package.json
@@ -42,6 +42,7 @@
     "lucide-react": "^0.263.1",
     "next": "13.4.12",
     "postcss": "8.4.27",
+    "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
@@ -52,6 +53,7 @@
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.6",
+    "use-debounce": "^9.0.4",
     "zod": "^3.21.4",
     "zustand": "^4.3.9"
   },
