--- a/admin/package.json
+++ b/admin/package.json
@@ -39,6 +39,7 @@
     "date-fns": "^2.30.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "hex-color-to-color-name": "^1.0.2",
     "lucide-react": "^0.263.1",
     "next": "13.4.12",
     "postcss": "8.4.27",
