--- a/admin/package.json
+++ b/admin/package.json
@@ -41,6 +41,8 @@
     "date-fns": "^2.30.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "flowbite": "^1.8.1",
+    "flowbite-react": "^0.5.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.263.1",
     "next": "13.4.12",
