--- a/store/package.json
+++ b/store/package.json
@@ -10,8 +10,13 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-collapsible": "^1.0.3",
+    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
@@ -25,13 +30,16 @@
     "lucide-react": "^0.269.0",
     "next": "13.4.19",
     "postcss": "8.4.28",
+    "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "use-debounce": "^9.0.4",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "prettier-plugin-organize-imports": "^3.2.3",
