--- a/store/package.json
+++ b/store/package.json
@@ -34,6 +34,7 @@
     "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
@@ -43,6 +44,7 @@
     "zustand": "^4.4.1"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.6",
     "prettier-plugin-organize-imports": "^3.2.3",
     "prettier-plugin-tailwindcss": "^0.5.3"
   }
