--- a/admin/package.json
+++ b/admin/package.json
@@ -38,14 +38,17 @@
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "contrast-color": "^1.0.1",
+    "country-list": "^2.3.0",
     "date-fns": "^2.30.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "localized-address-format": "^1.3.1",
     "lucide-react": "^0.263.1",
     "next": "13.4.12",
     "postcss": "8.4.27",
     "query-string": "^8.1.0",
     "react": "18.2.0",
+    "react-day-picker": "^8.8.1",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.45.2",
@@ -63,6 +66,7 @@
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@types/contrast-color": "^1.0.0",
+    "@types/country-list": "^2.1.1",
     "prettier": "^3.0.0",
     "prettier-plugin-organize-imports": "^3.2.3",
     "prettier-plugin-tailwindcss": "^0.4.1"
