--- a/admin/package.json
+++ b/admin/package.json
@@ -55,7 +55,7 @@
     "react-hook-form": "^7.45.2",
     "react-hot-toast": "^2.4.1",
     "react-query": "^3.39.3",
-    "swiper": "^10.2.0",
+    "recharts": "^2.8.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
@@ -65,8 +65,6 @@
     "zustand": "^4.3.9"
   },
   "devDependencies": {
-    "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@types/contrast-color": "^1.0.0",
     "@types/country-list": "^2.1.1",
     "prettier": "^3.0.0",
     "prettier-plugin-organize-imports": "^3.2.3",
