--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -1,7 +1,6 @@
 version: '3'
 services:
   postgres:
-    container_name: postgres
     image: postgres:alpine
     ports:
       - '5432:5432'
@@ -13,6 +12,6 @@ services:
       - POSTGRES_DB=greenify
 
   redis:
-    image: 'redis:alpine'
+    image: redis:alpine
     ports:
       - '6379:6379'
