--- a/server/package.json
+++ b/server/package.json
@@ -34,12 +34,12 @@
     "argon2": "^0.30.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
-    "connect-redis": "6",
+    "connect-redis": "^7.1.1",
     "date-fns": "^2.30.0",
     "express-session": "^1.17.3",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "redis": "3.1.2",
+    "redis": "^4.6.13",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "stripe": "^13.4.0",
@@ -49,7 +49,6 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
-    "@types/connect-redis": "^0.0.20",
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.17.7",
     "@types/hapi__joi": "^17.1.9",
