--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,8 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
-    "migrate": "prisma migrate deploy",
+    "start:prod": "prisma migrate deploy && node dist/main",
+    "gen": "prisma generate",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
