feature: display search page

--- a/mobile/tsconfig.json
+++ b/mobile/tsconfig.json
@@ -5,6 +5,6 @@
       "@/*": ["*"]
     }
   },
-  "include": ["**/**/*"],
+  "include": ["**/**/**/*.tsx", "**/**/**/*.ts"],
   "extends": "expo/tsconfig.base"
 }
