add price filter

--- a/mobile/tsconfig.json
+++ b/mobile/tsconfig.json
@@ -5,6 +5,6 @@
       "@/*": ["*"]
     }
   },
-  "include": ["**/**/**/*.tsx", "**/**/**/*.ts"],
+  "include": ["**/**/*.tsx", "**/**/*.ts"],
   "extends": "expo/tsconfig.base"
 }
