--- a/mobile/package.json
+++ b/mobile/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "ts:check": "tsc",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -15,6 +15,7 @@
     "@types/react": "~18.2.45",
     "expo": "~50.0.11",
     "expo-constants": "~15.4.5",
+    "expo-dev-client": "~3.3.11",
     "expo-font": "~11.10.3",
     "expo-image": "~1.10.6",
     "expo-linking": "~6.2.2",
@@ -23,6 +24,7 @@
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-gesture-handler": "^2.15.0",
+    "react-native-reanimated": "^3.8.1",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
