--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=greenify
+      - POSTGRES_DB=varve
 
   redis:
     image: redis:alpine
