fix avatar not installed

--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -1,17 +1,8 @@
 version: '3'
 services:
-  postgres:
-    image: postgres:alpine
+  api:
+    image: alphazero/greenscape:latest
     ports:
-      - '5432:5432'
-    volumes:
-      - /data/postgres:/data/postgres
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=varve
-
-  redis:
-    image: redis:alpine
-    ports:
-      - '6379:6379'
+      - '5000:5000'
+    env_file:
+      - .env
