--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,5 +1,4 @@
 FROM node:18-alpine
-WORKDIR /user/src/app
 RUN mkdir node_modules && chown -R node:node /user/src/app
 COPY package.json .
 COPY yarn.lock .
@@ -9,5 +8,6 @@ COPY --chown=node:node . .
 ENV NODE_ENV=production
 RUN yarn gen
 RUN yarn build
+RUN yarn prisma migrate deploy
 EXPOSE 5000
 CMD [ "yarn", "start:prod" ]
