--- a/server/.gitignore
+++ b/server/.gitignore
@@ -35,3 +35,19 @@ lerna-debug.log*
 !.vscode/extensions.json
 
 *.env*
+# Local .terraform directories
+**/.terraform/*
+
+# Ignore variables files
+*.auto.tfvars
+
+# Ignore override files
+*.tfoverride
+
+# Ignore environment-specific files
+.envrc
+
+# Ignore CLI configuration files
+.terraformrc
+modules/terraform.rc
+modules/terraform.tfstate*
